set templates editable. TODO: fix error with input fields for first time selecting on mobile

--- a/lifting-log-web/src/Routes/EditTemplatePage.css
+++ b/lifting-log-web/src/Routes/EditTemplatePage.css
@@ -46,7 +46,7 @@
 }
 
 .edit-template-exercise-name {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .edit-template-set {
@@ -70,6 +70,30 @@
     align-content: center;
     font-size: 14px;
     height: 28px;
+}
+
+.edit-template-set-row-item-rep-range {
+    width: 100px;
+    text-align: center;
+    align-content: center;
+    font-size: 14px;
+    height: 28px;
+}
+
+.rep-range {
+    text-align: center;
+    align-content: center;
+    width: 40%;
+    padding: 3px;
+}
+
+.time-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
 }
 
 .line-light {
@@ -98,4 +122,12 @@
 .routine-note {
     margin-top: 8px;
     width: 80%;
+    font-size: 16px;
+}
+
+select {
+    appearance: none;
+    background-color: rgb(37, 37, 37);
+    border: 2px solid rgb(37, 37, 37);
+    color: white;
 }
